# Test

./: README.md
Our_cloud/: CMakeLists.txt  run  run.c
Our_cloud/client/: CMakeLists.txt  client.c  client.h
Our_cloud/core/: all_functions.h  cloud.h  cloud_interface.h  files.h  networking.h  server.h  storage.h
